fix: header content alignment in tablet

--- a/main/assets/css/blocks/_index.scss
+++ b/main/assets/css/blocks/_index.scss
@@ -26,7 +26,7 @@
   }
 
   //rename
-  .contrast-box {
+  .tour-description[data-style="dark"] {
     padding-inline: var(--space-m-l);
     padding-block: var(--space-xl-2xl);
   }
@@ -59,6 +59,7 @@
 
     .header-content {
       justify-content: end;
+      margin-top: 0;
     }
 
     .tour {
@@ -82,7 +83,7 @@
         grid-column: 8 / 13;
         grid-row: 2;
       }
-      .contrast-box {
+      .tour-description[data-style="dark"] {
         grid-column: 8 / 13;
         grid-row: 3;
       }
